--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <h1 class="sub-title"> <i class="red">M</i>y <i class="red">W</i>ork </h1>
     <div class="work-list">
         <div class="work">
-            <img src="portfolio_cnc/video/1.png" alt="1">
+            <img src="https://github.com/cnchoudhari/Portfolio_cnc/blob/main/video/1.png" alt="1">
             <div class="layer">
                 <h3><b>NNF COAL EMPLOYMENTEXPLORER SYSTEM </b></h3>
                 <p style="color:whitesmoke;">create a simplified NNF company website to ease NON- İT job application , fostering direct connection with HR for streamlined hiring .</p>
