--- a/index.html
+++ b/index.html
@@ -200,20 +200,20 @@
         </div>
 
         <div class="work">
-            <img src="./video/ec1.jpg" alt="3">
+            <img src="./video/ec1.jpg" alt="2">
             <div class="layer">
                 <h3><b>URBANSTREETWEAR'S E-COMMERCE WEBSITE</b></h3>
                 <p style="color:whitesmoke;">Urbanstreetware's e-commerce platform seamlessly blends trendy streetwearand user-friendly features, providing an enhanced shopping experience that showcases the latest urban fashion trends with secure transactions.</p>
-                <a href="/asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
+                <a href="./asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
 
         <div class="work">
-            <img src="./video/aa1.jpg" alt="2">
+            <img src="./video/aa1.jpg" alt="3">
             <div class="layer">
                 <h3><b>SITUATIONAL ANALYTIC FROM SOCIAL MEDIA NETWORK</b></h3>
                 <p style="color:whitesmoke;">Aim Of Project to counter online scams by tracking and comparing positive and negative comments on social media .enhance information accuracy amd expose public sentiments</p>
-                <a href="/asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
+                <a href="./asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
       
@@ -224,7 +224,7 @@
             <div class="layer">
                 <h3><b>STUDENT FEEDBACK SYSTEM</b></h3>
                 <p style="color:#fff;">create a unique login-based website for studentsto provide teacher feedback, reducing college managementstress.streamline the process.</p>
-                <a href="/asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
+                <a href="./asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
      
