--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#auto-input', {
-      strings: ['<i>Chetan Choudhari.</i>','<b><i>Fullstack Developer.</i></b>','<b><i>SQL Developer.</i></b>'],
+      strings: ['<b><i>Chetan Choudhari.</i></b>','<b><i>Fullstack Developer.</i></b>','<b><i>SQL Developer.</i></b>'],
       typeSpeed: 100,
       backspeed:100,
       loop:true
