--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container-1">
 
     <video  autoplay loop muted plays-inline  class="back-video"
-        src="./video/Data.mp4" type="data/mp4"></video>
+        src="./video/ego.mp4" type="data/mp4"></video>
     
          <nav class="navbar">
 
