--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <li><span><h2><u>Front-End Skills</u></h2></span>
                             <br>
                             <b><h3>
-                                 Java Script,React JS,Bootstrap,CSS,HTML5.
+                                 Java Script,Bootstrap,CSS,HTML5.
                                </h3>
                             </b>
                         </li>
@@ -93,7 +93,7 @@
                         <li><span><h2><u>Language</u></h2></span>
                             <br>
                             <b><h3>
-                                 Python, Java,
+                                 Basic Python, Java
                                </h3>
                             </b>
                         </li>
@@ -160,7 +160,7 @@
                         </h2></span>
                             <br>
                             <b><h3>
-                             <li>•	Full Stack Java Development Program From Naresh IT Technology ,Hyderabad,<pre>   Aug 2023.</pre></li>  
+                             <li>•  Java Development Program From Naresh IT Technology ,Hyderabad,<pre>   Aug 2023.</pre></li>  
                              <li>•	Web Development Bootcamp İn Udemy , Nov 2022.</li>
                              <li>•	MS-CIT Earned From Maharashtra State Board , July 2013.</li>  
                                 
@@ -199,14 +199,7 @@
             </div>
         </div>
 
-        <div class="work">
-            <img src="./video/ec1.jpg" alt="2">
-            <div class="layer">
-                <h3><b>URBANSTREETWEAR'S E-COMMERCE WEBSITE</b></h3>
-                <p style="color:whitesmoke;">Urbanstreetware's e-commerce platform seamlessly blends trendy streetwearand user-friendly features, providing an enhanced shopping experience that showcases the latest urban fashion trends with secure transactions.</p>
-                <a href="/asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
-            </div>
-        </div>
+       
 
         <div class="work">
             <img src="./video/aa1.jpg" alt="3">
