--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             </div>
             <div class="hbtn">
-                <a href="./video/chetan resume.pdf" download class="x1"><b>Download C V</b></a>
+                <a href="./video/chetan_choudhari-resume.pdf" download class="x1"><b>Download C V</b></a>
                 <a href="#about" class="x1"><b>About</b></a>
     
 
@@ -247,7 +247,7 @@
                 
                 </div>
 
-                <a href="./video/chetan resume.pdf" download class="btn "><b>Download C V</b></a>
+                <a href="./video/chetan_choudhari-resume.pdf" download class="btn "><b>Download C V</b></a>
 
             </div>
             <div class="contact-right">
