--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             </div>
             <div class="hbtn">
-                <a href="./video/chetan_choudhari-resume.pdf" download class="x1"><b>Download C V</b></a>
+                <a href="./video/chetanresume2025.pdf" download class="x1"><b>Download C V</b></a>
                 <a href="#about" class="x1"><b>About</b></a>
     
 
@@ -328,3 +328,4 @@
     
 </body>
 </html>
+
