--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 
                 </div>
 
-                <a href="./video/chetan_choudhari-resume.pdf" download class="btn "><b>Download C V</b></a>
+                <a href="./video/chetanresume2025.pdf" download class="btn "><b>Download C V</b></a>
 
             </div>
             <div class="contact-right">
@@ -328,4 +328,5 @@
     
 </body>
 </html>
+
 
