--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="layer">
                 <h3><b>STUDENT FEEDBACK SYSTEM</b></h3>
                 <p style="color:#fff;">create a unique login-based website for studentsto provide teacher feedback, reducing college managementstress.streamline the process.</p>
-                <a href="/asset/servererror.html"><i class="fas fa-external-link-alt"></i></a>
+                <a href="sfb.42web.io"><i class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
      
@@ -328,5 +328,6 @@
     
 </body>
 </html>
+
 
 
